# EQ_Mount

./: .gitignore  CMakeLists.txt  EQ_DRIVER.ioc  LICENSE  README.md
EQ_DRIVER/: .cproject  .project  EQ_DRIVER.ioc
EQ_DRIVER/Core/Inc/: astro_conv.h  astro_targets.h  main.h  stm32f1xx_it.h  tim.h  variables.h
EQ_DRIVER/Core/Src/: adc.c  astro_conv.c  gpio.c  main.c  spi.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  sysmem.c  tim.c  variables.c
EQ_DRIVER/Drivers/NRF24L01/Inc/: nrf24l01p.h
EQ_DRIVER/Drivers/NRF24L01/Src/: nrf24l01p.c
source/EQ DRIVER/: .cproject  .mxproject  .project  CMakeLists.txt  EQ DRIVER.ioc
source/EQ DRIVER/Controller/: EQController.ioc8
source/EQ DRIVER/Core/Inc/: adc.h  astro_conv.h  astro_targets.h  gpio.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  tim.h  variables.h
source/EQ DRIVER/Core/Inc/Backup/: FreeRTOSConfig.h.bak  adc.h.bak  astro_conv.h.bak  bkp_regs.h.bak  gpio.h.bak  horse_run.h.bak  main.h.bak  steppers.h.bak  stm32f1xx_hal_conf.h.bak  stm32f1xx_it.h.bak  tim.h.bak  variables.h.bak
source/EQ DRIVER/Core/Src/: adc.c  astro_conv.c  bkp_regs.c  gpio.c  i2c.c  main.c  rtc.c  spi.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  sysmem.c  tim.c  variables.c
source/EQ DRIVER/Core/Src/Backup/: adc.c.bak  astro_conv.c.bak  bkp_regs.c.bak  freertos.c.bak  gpio.c.bak  i2c.c.bak  main.c.bak  steppers.c.bak  stm32f1xx_hal_msp.c.bak  stm32f1xx_hal_timebase_tim.c.bak  stm32f1xx_it.c.bak  syscalls.c.bak  tim.c.bak  usart.c.bak  variables.c.bak
source/EQ DRIVER/Debug/: EQ DRIVER.elf  EQ DRIVER.list  EQ DRIVER.map  makefile  objects.list  sources.mk
source/EQ DRIVER/Debug/Core/Src/: adc.su  astro_conv.su  bkp_regs.su  gpio.su  main.su  steppers.su  stm32f1xx_it.su  subdir.mk  syscalls.su  variables.su
source/EQ DRIVER/Debug/Core/Startup/: subdir.mk
source/EQ DRIVER/Drivers/CMSIS/Include/: cmsis_armcc.h  cmsis_armclang.h  cmsis_compiler.h  cmsis_gcc.h  cmsis_iccarm.h  cmsis_version.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm4.h  core_cm7.h  core_sc000.h  core_sc300.h  mpu_armv7.h  mpu_armv8.h  tz_context.h
source/EQ DRIVER/Drivers/Display/Inc/: Fonts.h  bitmaps.h  horse_running.h  sh1106.h
source/EQ DRIVER/Drivers/Display/Src/: sh1106.c
source/EQ DRIVER/Drivers/GNSS/Inc/: PA6H.h
source/EQ DRIVER/Drivers/GNSS/Src/: PA6H.c
source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal.h  stm32f1xx_hal_adc.h  stm32f1xx_hal_adc_ex.h  stm32f1xx_hal_cortex.h  stm32f1xx_hal_def.h  stm32f1xx_hal_dma.h  stm32f1xx_hal_dma_ex.h  stm32f1xx_hal_exti.h  stm32f1xx_hal_flash.h  stm32f1xx_hal_flash_ex.h  stm32f1xx_hal_gpio.h  stm32f1xx_hal_i2c.h  stm32f1xx_hal_pwr.h  stm32f1xx_hal_rcc.h  stm32f1xx_hal_rcc_ex.h  stm32f1xx_hal_rtc.h  stm32f1xx_hal_rtc_ex.h  stm32f1xx_hal_tim.h  stm32f1xx_hal_tim_ex.h  stm32f1xx_hal_uart.h  stm32f1xx_ll_cortex.h  stm32f1xx_ll_utils.h
source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal.c  stm32f1xx_hal_adc.c  stm32f1xx_hal_adc_ex.c  stm32f1xx_hal_cortex.c  stm32f1xx_hal_dma.c  stm32f1xx_hal_exti.c  stm32f1xx_hal_flash.c  stm32f1xx_hal_flash_ex.c  stm32f1xx_hal_gpio.c  stm32f1xx_hal_gpio_ex.c  stm32f1xx_hal_i2c.c  stm32f1xx_hal_pwr.c  stm32f1xx_hal_rcc.c  stm32f1xx_hal_rcc_ex.c  stm32f1xx_hal_rtc.c  stm32f1xx_hal_rtc_ex.c  stm32f1xx_hal_tim.c  stm32f1xx_hal_tim_ex.c  stm32f1xx_hal_uart.c
source/EQ DRIVER/Drivers/Steppers/Inc/: steppers.h
source/EQ DRIVER/Drivers/Steppers/Src/: steppers.c
source/EQ_DRIVER/: .mxproject  EQ DRIVER.ioc
source/EQ_DRIVER/Core/Inc/: astro_conv.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  tim.h
source/EQ_DRIVER/Core/Src/: adc.c  astro_conv.c  gpio.c  main.c  spi.c  stm32f1xx_hal_msp.c  stm32f1xx_hal_timebase_tim.c  stm32f1xx_it.c  system_stm32f1xx.c  tim.c  variables.c
source/EQ_DRIVER/Drivers/CMSIS/Include/: cmsis_armcc.h  cmsis_armclang.h  cmsis_compiler.h  cmsis_gcc.h  cmsis_iccarm.h  cmsis_version.h  core_armv8mbl.h  core_armv8mml.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm4.h  core_cm7.h  core_sc000.h  core_sc300.h  mpu_armv7.h
source/EQ_DRIVER/Drivers/GNSS/Inc/: PA6H.h
source/EQ_DRIVER/Drivers/GNSS/Src/: PA6H.c
source/EQ_DRIVER/Drivers/NRF24L01/Inc/: nrf24l01p.h
source/EQ_DRIVER/Drivers/NRF24L01/Src/: nrf24l01p.c
source/EQ_DRIVER/Drivers/STM32F1xx_HAL_Driver/: License.md
source/EQ_DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal.h  stm32f1xx_hal_adc.h  stm32f1xx_hal_adc_ex.h  stm32f1xx_hal_cortex.h  stm32f1xx_hal_def.h  stm32f1xx_hal_dma.h  stm32f1xx_hal_dma_ex.h  stm32f1xx_hal_exti.h  stm32f1xx_hal_flash.h  stm32f1xx_hal_flash_ex.h  stm32f1xx_hal_gpio.h  stm32f1xx_hal_gpio_ex.h  stm32f1xx_hal_pwr.h  stm32f1xx_hal_rcc.h  stm32f1xx_hal_rcc_ex.h  stm32f1xx_hal_spi.h  stm32f1xx_hal_tim.h  stm32f1xx_hal_tim_ex.h  stm32f1xx_hal_uart.h  stm32f1xx_ll_adc.h  stm32f1xx_ll_bus.h  stm32f1xx_ll_cortex.h  stm32f1xx_ll_dma.h  stm32f1xx_ll_exti.h  stm32f1xx_ll_gpio.h  stm32f1xx_ll_pwr.h  stm32f1xx_ll_rcc.h  stm32f1xx_ll_system.h  stm32f1xx_ll_tim.h  stm32f1xx_ll_usart.h  stm32f1xx_ll_utils.h
source/EQ_DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal.c  stm32f1xx_hal_adc.c  stm32f1xx_hal_adc_ex.c  stm32f1xx_hal_cortex.c  stm32f1xx_hal_dma.c  stm32f1xx_hal_flash.c  stm32f1xx_hal_flash_ex.c  stm32f1xx_hal_gpio_ex.c  stm32f1xx_hal_pwr.c  stm32f1xx_hal_rcc.c  stm32f1xx_hal_spi.c  stm32f1xx_hal_tim.c  stm32f1xx_hal_tim_ex.c  stm32f1xx_hal_uart.c
source/EQ_DRIVER/Drivers/Steppers/Inc/: steppers.h
source/EQ_menu_controller/: EQ_menu_controller.ino
source/V3/EQ DRIVER/: .cproject  .mxproject  EQ DRIVER.ioc  EQ DRIVER.launch
source/V3/EQ DRIVER/Debug/: EQ DRIVER.elf  EQ DRIVER.list  EQ DRIVER.map  makefile  objects.list  sources.mk
source/steppers/: steppers.ino
source/v1/EQ_menu_controller/: EQ_menu_controller.ino
source/v2/EQ_menu_controller/: EQ_menu_controller.ino
source/v2/steppers/: steppers.h
v1/EQ_menu_controller/: EQ_menu_controller.ino
v1/steppers/: steppers.h
v2/EQ_menu_controller/: EQ_menu_controller.ino
(+62 files in other folders)
