cmake_minimum_required(VERSION 3.23)
project(EQmount_custom_controller)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(source)
include_directories(source/V3)
include_directories("source/V3/EQ DRIVER")
include_directories("source/V3/EQ DRIVER/.settings")
include_directories("source/V3/EQ DRIVER/Core")
include_directories("source/V3/EQ DRIVER/Core/Inc")
include_directories("source/V3/EQ DRIVER/Core/Src")
include_directories("source/V3/EQ DRIVER/Core/Startup")
include_directories("source/V3/EQ DRIVER/Debug")
include_directories("source/V3/EQ DRIVER/Drivers")
include_directories("source/V3/EQ DRIVER/Drivers/CMSIS")
include_directories("source/V3/EQ DRIVER/Drivers/CMSIS/Device")
include_directories("source/V3/EQ DRIVER/Drivers/CMSIS/Device/ST")
include_directories("source/V3/EQ DRIVER/Drivers/CMSIS/Device/ST/STM32F1xx")
include_directories("source/V3/EQ DRIVER/Drivers/CMSIS/Device/ST/STM32F1xx/Include")
include_directories("source/V3/EQ DRIVER/Drivers/CMSIS/Include")
include_directories("source/V3/EQ DRIVER/Drivers/Display")
include_directories("source/V3/EQ DRIVER/Drivers/Display/Inc")
include_directories("source/V3/EQ DRIVER/Drivers/Display/Src")
include_directories("source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver")
include_directories("source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc")
include_directories("source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/Legacy")
include_directories("source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src")

add_executable(EQmount_custom_controller
               "source/V3/EQ DRIVER/.settings/language.settings.xml"
               "source/V3/EQ DRIVER/.settings/org.eclipse.cdt.core.prefs"
               "source/V3/EQ DRIVER/.settings/stm32cubeide.project.prefs"
               "source/V3/EQ DRIVER/Core/Inc/Backup/adc.h.bak"
               "source/V3/EQ DRIVER/Core/Inc/Backup/FreeRTOSConfig.h.bak"
               "source/V3/EQ DRIVER/Core/Inc/Backup/gpio.h.bak"
               "source/V3/EQ DRIVER/Core/Inc/Backup/horse_run.h.bak"
               "source/V3/EQ DRIVER/Core/Inc/Backup/i2c.h.bak"
               "source/V3/EQ DRIVER/Core/Inc/Backup/main.h.bak"
               "source/V3/EQ DRIVER/Core/Inc/Backup/stm32f1xx_hal_conf.h.bak"
               "source/V3/EQ DRIVER/Core/Inc/Backup/stm32f1xx_it.h.bak"
               "source/V3/EQ DRIVER/Core/Inc/Backup/tim.h.bak"
               "source/V3/EQ DRIVER/Core/Inc/Backup/usart.h.bak"
               "source/V3/EQ DRIVER/Core/Inc/Backup/variables.h.bak"
               "source/V3/EQ DRIVER/Core/Inc/adc.h"
               "source/V3/EQ DRIVER/Core/Inc/bkp_regs.h"
               "source/V3/EQ DRIVER/Core/Inc/gpio.h"
               "source/V3/EQ DRIVER/Core/Inc/i2c.h"
               "source/V3/EQ DRIVER/Core/Inc/main.h"
               "source/V3/EQ DRIVER/Core/Inc/stm32f1xx_hal_conf.h"
               "source/V3/EQ DRIVER/Core/Inc/stm32f1xx_it.h"
               "source/V3/EQ DRIVER/Core/Inc/tim.h"
               "source/V3/EQ DRIVER/Core/Inc/variables.h"
               "source/V3/EQ DRIVER/Core/Src/Backup/adc.c.bak"
               "source/V3/EQ DRIVER/Core/Src/Backup/freertos.c.bak"
               "source/V3/EQ DRIVER/Core/Src/Backup/gpio.c.bak"
               "source/V3/EQ DRIVER/Core/Src/Backup/i2c.c.bak"
               "source/V3/EQ DRIVER/Core/Src/Backup/main.c.bak"
               "source/V3/EQ DRIVER/Core/Src/Backup/stm32f1xx_hal_msp.c.bak"
               "source/V3/EQ DRIVER/Core/Src/Backup/stm32f1xx_hal_timebase_tim.c.bak"
               "source/V3/EQ DRIVER/Core/Src/Backup/stm32f1xx_it.c.bak"
               "source/V3/EQ DRIVER/Core/Src/Backup/syscalls.c.bak"
               "source/V3/EQ DRIVER/Core/Src/Backup/sysmem.c.bak"
               "source/V3/EQ DRIVER/Core/Src/Backup/system_stm32f1xx.c.bak"
               "source/V3/EQ DRIVER/Core/Src/Backup/tim.c.bak"
               "source/V3/EQ DRIVER/Core/Src/Backup/usart.c.bak"
               "source/V3/EQ DRIVER/Core/Src/Backup/variables.c.bak"
               "source/V3/EQ DRIVER/Core/Src/adc.c"
               "source/V3/EQ DRIVER/Core/Src/bkp_regs.c"
               "source/V3/EQ DRIVER/Core/Src/gpio.c"
               "source/V3/EQ DRIVER/Core/Src/i2c.c"
               "source/V3/EQ DRIVER/Core/Src/main.c"
               "source/V3/EQ DRIVER/Core/Src/stm32f1xx_hal_msp.c"
               "source/V3/EQ DRIVER/Core/Src/stm32f1xx_hal_timebase_tim.c"
               "source/V3/EQ DRIVER/Core/Src/stm32f1xx_it.c"
               "source/V3/EQ DRIVER/Core/Src/syscalls.c"
               "source/V3/EQ DRIVER/Core/Src/sysmem.c"
               "source/V3/EQ DRIVER/Core/Src/system_stm32f1xx.c"
               "source/V3/EQ DRIVER/Core/Src/tim.c"
               "source/V3/EQ DRIVER/Core/Src/variables.c"
               "source/V3/EQ DRIVER/Core/Startup/startup_stm32f103c8tx.s"
               "source/V3/EQ DRIVER/Debug/Core/Src/adc.su"
               "source/V3/EQ DRIVER/Debug/Core/Src/bkp_regs.su"
               "source/V3/EQ DRIVER/Debug/Core/Src/gpio.su"
               "source/V3/EQ DRIVER/Debug/Core/Src/i2c.su"
               "source/V3/EQ DRIVER/Debug/Core/Src/main.su"
               "source/V3/EQ DRIVER/Debug/Core/Src/stm32f1xx_hal_msp.su"
               "source/V3/EQ DRIVER/Debug/Core/Src/stm32f1xx_hal_timebase_tim.su"
               "source/V3/EQ DRIVER/Debug/Core/Src/stm32f1xx_it.su"
               "source/V3/EQ DRIVER/Debug/Core/Src/subdir.mk"
               "source/V3/EQ DRIVER/Debug/Core/Src/syscalls.su"
               "source/V3/EQ DRIVER/Debug/Core/Src/sysmem.su"
               "source/V3/EQ DRIVER/Debug/Core/Src/system_stm32f1xx.su"
               "source/V3/EQ DRIVER/Debug/Core/Src/tim.su"
               "source/V3/EQ DRIVER/Debug/Core/Src/variables.su"
               "source/V3/EQ DRIVER/Debug/Core/Startup/subdir.mk"
               "source/V3/EQ DRIVER/Debug/Drivers/Display/Src/sh1106.su"
               "source/V3/EQ DRIVER/Debug/Drivers/Display/Src/subdir.mk"
               "source/V3/EQ DRIVER/Debug/Drivers/Display/subdir.mk"
               "source/V3/EQ DRIVER/Debug/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal.su"
               "source/V3/EQ DRIVER/Debug/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_adc.su"
               "source/V3/EQ DRIVER/Debug/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_adc_ex.su"
               "source/V3/EQ DRIVER/Debug/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_cortex.su"
               "source/V3/EQ DRIVER/Debug/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_dma.su"
               "source/V3/EQ DRIVER/Debug/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_exti.su"
               "source/V3/EQ DRIVER/Debug/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash.su"
               "source/V3/EQ DRIVER/Debug/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash_ex.su"
               "source/V3/EQ DRIVER/Debug/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio.su"
               "source/V3/EQ DRIVER/Debug/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio_ex.su"
               "source/V3/EQ DRIVER/Debug/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_i2c.su"
               "source/V3/EQ DRIVER/Debug/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_pwr.su"
               "source/V3/EQ DRIVER/Debug/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc.su"
               "source/V3/EQ DRIVER/Debug/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc_ex.su"
               "source/V3/EQ DRIVER/Debug/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim.su"
               "source/V3/EQ DRIVER/Debug/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim_ex.su"
               "source/V3/EQ DRIVER/Debug/Drivers/STM32F1xx_HAL_Driver/Src/subdir.mk"
               "source/V3/EQ DRIVER/Debug/Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2/subdir.mk"
               "source/V3/EQ DRIVER/Debug/Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM3/subdir.mk"
               "source/V3/EQ DRIVER/Debug/Middlewares/Third_Party/FreeRTOS/Source/portable/MemMang/subdir.mk"
               "source/V3/EQ DRIVER/Debug/Middlewares/Third_Party/FreeRTOS/Source/subdir.mk"
               "source/V3/EQ DRIVER/Debug/EQ DRIVER.elf"
               "source/V3/EQ DRIVER/Debug/EQ DRIVER.list"
               "source/V3/EQ DRIVER/Debug/EQ DRIVER.map"
               "source/V3/EQ DRIVER/Debug/makefile"
               "source/V3/EQ DRIVER/Debug/objects.list"
               "source/V3/EQ DRIVER/Debug/objects.mk"
               "source/V3/EQ DRIVER/Debug/sources.mk"
               "source/V3/EQ DRIVER/Drivers/CMSIS/Device/ST/STM32F1xx/Include/stm32f103xb.h"
               "source/V3/EQ DRIVER/Drivers/CMSIS/Device/ST/STM32F1xx/Include/stm32f1xx.h"
               "source/V3/EQ DRIVER/Drivers/CMSIS/Device/ST/STM32F1xx/Include/system_stm32f1xx.h"
               "source/V3/EQ DRIVER/Drivers/CMSIS/Device/ST/STM32F1xx/License.md"
               "source/V3/EQ DRIVER/Drivers/CMSIS/Include/cmsis_armcc.h"
               "source/V3/EQ DRIVER/Drivers/CMSIS/Include/cmsis_armclang.h"
               "source/V3/EQ DRIVER/Drivers/CMSIS/Include/cmsis_compiler.h"
               "source/V3/EQ DRIVER/Drivers/CMSIS/Include/cmsis_gcc.h"
               "source/V3/EQ DRIVER/Drivers/CMSIS/Include/cmsis_iccarm.h"
               "source/V3/EQ DRIVER/Drivers/CMSIS/Include/cmsis_version.h"
               "source/V3/EQ DRIVER/Drivers/CMSIS/Include/core_armv8mbl.h"
               "source/V3/EQ DRIVER/Drivers/CMSIS/Include/core_armv8mml.h"
               "source/V3/EQ DRIVER/Drivers/CMSIS/Include/core_cm0.h"
               "source/V3/EQ DRIVER/Drivers/CMSIS/Include/core_cm0plus.h"
               "source/V3/EQ DRIVER/Drivers/CMSIS/Include/core_cm1.h"
               "source/V3/EQ DRIVER/Drivers/CMSIS/Include/core_cm23.h"
               "source/V3/EQ DRIVER/Drivers/CMSIS/Include/core_cm3.h"
               "source/V3/EQ DRIVER/Drivers/CMSIS/Include/core_cm33.h"
               "source/V3/EQ DRIVER/Drivers/CMSIS/Include/core_cm4.h"
               "source/V3/EQ DRIVER/Drivers/CMSIS/Include/core_cm7.h"
               "source/V3/EQ DRIVER/Drivers/CMSIS/Include/core_sc000.h"
               "source/V3/EQ DRIVER/Drivers/CMSIS/Include/core_sc300.h"
               "source/V3/EQ DRIVER/Drivers/CMSIS/Include/mpu_armv7.h"
               "source/V3/EQ DRIVER/Drivers/CMSIS/Include/mpu_armv8.h"
               "source/V3/EQ DRIVER/Drivers/CMSIS/Include/tz_context.h"
               "source/V3/EQ DRIVER/Drivers/CMSIS/LICENSE.txt"
               "source/V3/EQ DRIVER/Drivers/Display/Inc/bitmaps.h"
               "source/V3/EQ DRIVER/Drivers/Display/Inc/Fonts.h"
               "source/V3/EQ DRIVER/Drivers/Display/Inc/horse_running.h"
               "source/V3/EQ DRIVER/Drivers/Display/Inc/sh1106.h"
               "source/V3/EQ DRIVER/Drivers/Display/Src/sh1106.c"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/Legacy/stm32_hal_legacy.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_adc.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_adc_ex.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_cortex.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_def.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_dma.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_dma_ex.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_exti.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_flash.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_flash_ex.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_gpio.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_gpio_ex.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_i2c.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_pwr.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_rcc.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_rcc_ex.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_tim.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_tim_ex.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_adc.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_bus.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_cortex.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_dma.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_exti.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_gpio.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_i2c.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_pwr.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_rcc.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_system.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_tim.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_utils.h"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal.c"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_adc.c"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_adc_ex.c"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_cortex.c"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_dma.c"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_exti.c"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash.c"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash_ex.c"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio.c"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio_ex.c"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_i2c.c"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_pwr.c"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc.c"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc_ex.c"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim.c"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim_ex.c"
               "source/V3/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/License.md"
               "source/V3/EQ DRIVER/.cproject"
               "source/V3/EQ DRIVER/.mxproject"
               "source/V3/EQ DRIVER/.project"
               "source/V3/EQ DRIVER/EQ DRIVER.ioc"
               "source/V3/EQ DRIVER/EQ DRIVER.launch"
               "source/V3/EQ DRIVER/STM32F103C8TX_FLASH.ld"
               v1/EQ_menu_controller/EQ_menu_controller.ino
               v1/steppers/steppers.h
               v2/EQ_menu_controller/EQ_menu_controller.ino
               v2/steppers/steppers.h
               .gitignore)