cmake_minimum_required(VERSION 3.23)
project(EQmount_custom_controller C)

set(CMAKE_C_STANDARD 11)

include_directories("source/EQ DRIVER/Core/Inc")
include_directories("source/EQ DRIVER/Drivers/CMSIS")
include_directories("source/EQ DRIVER/Drivers/CMSIS/Device")
include_directories("source/EQ DRIVER/Drivers/CMSIS/Device/ST")
include_directories("source/EQ DRIVER/Drivers/CMSIS/Device/ST/STM32F1xx")
include_directories("source/EQ DRIVER/Drivers/CMSIS/Device/ST/STM32F1xx/Include")
include_directories("source/EQ DRIVER/Drivers/CMSIS/Include")
include_directories("source/EQ DRIVER/Drivers/Display/Inc")
include_directories("source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc")
include_directories("source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/Legacy")
include_directories("source/EQ DRIVER/Core/Inc")
include_directories("source/EQ DRIVER/Drivers/CMSIS")
include_directories("source/EQ DRIVER/Drivers/CMSIS/Device")
include_directories("source/EQ DRIVER/Drivers/CMSIS/Device/ST")
include_directories("source/EQ DRIVER/Drivers/CMSIS/Device/ST/STM32F1xx")
include_directories("source/EQ DRIVER/Drivers/CMSIS/Device/ST/STM32F1xx/Include")
include_directories("source/EQ DRIVER/Drivers/CMSIS/Include")
include_directories("source/EQ DRIVER/Drivers/Display/Inc")
include_directories("source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc")
include_directories("source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/Legacy")

add_executable(EQmount_custom_controller
        "source/EQ DRIVER/Core/Inc/adc.h"
        "source/EQ DRIVER/Core/Inc/bkp_regs.h"
        "source/EQ DRIVER/Core/Inc/gpio.h"
        "source/EQ DRIVER/Core/Inc/i2c.h"
        "source/EQ DRIVER/Core/Inc/main.h"
        "source/EQ DRIVER/Core/Inc/stm32f1xx_hal_conf.h"
        "source/EQ DRIVER/Core/Inc/stm32f1xx_it.h"
        "source/EQ DRIVER/Core/Inc/tim.h"
        "source/EQ DRIVER/Core/Inc/variables.h"
        "source/EQ DRIVER/Core/Src/adc.c"
        "source/EQ DRIVER/Core/Src/bkp_regs.c"
        "source/EQ DRIVER/Core/Src/gpio.c"
        "source/EQ DRIVER/Core/Src/i2c.c"
        "source/EQ DRIVER/Core/Src/main.c"
        "source/EQ DRIVER/Core/Src/stm32f1xx_hal_msp.c"
        "source/EQ DRIVER/Core/Src/stm32f1xx_hal_timebase_tim.c"
        "source/EQ DRIVER/Core/Src/stm32f1xx_it.c"
        "source/EQ DRIVER/Core/Src/syscalls.c"
        "source/EQ DRIVER/Core/Src/sysmem.c"
        "source/EQ DRIVER/Core/Src/system_stm32f1xx.c"
        "source/EQ DRIVER/Core/Src/tim.c"
        "source/EQ DRIVER/Core/Src/variables.c"
        "source/EQ DRIVER/Drivers/CMSIS/Device/ST/STM32F1xx/Include/stm32f103xb.h"
        "source/EQ DRIVER/Drivers/CMSIS/Device/ST/STM32F1xx/Include/stm32f1xx.h"
        "source/EQ DRIVER/Drivers/CMSIS/Device/ST/STM32F1xx/Include/system_stm32f1xx.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/cmsis_armcc.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/cmsis_armclang.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/cmsis_compiler.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/cmsis_gcc.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/cmsis_iccarm.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/cmsis_version.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/core_armv8mbl.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/core_armv8mml.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/core_cm0.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/core_cm0plus.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/core_cm1.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/core_cm23.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/core_cm3.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/core_cm33.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/core_cm4.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/core_cm7.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/core_sc000.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/core_sc300.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/mpu_armv7.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/mpu_armv8.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/tz_context.h"
        "source/EQ DRIVER/Drivers/Display/Inc/bitmaps.h"
        "source/EQ DRIVER/Drivers/Display/Inc/Fonts.h"
        "source/EQ DRIVER/Drivers/Display/Inc/horse_running.h"
        "source/EQ DRIVER/Drivers/Display/Inc/sh1106.h"
        "source/EQ DRIVER/Drivers/Display/Src/sh1106.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/Legacy/stm32_hal_legacy.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_adc.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_adc_ex.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_cortex.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_def.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_dma.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_dma_ex.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_exti.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_flash.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_flash_ex.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_gpio.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_gpio_ex.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_i2c.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_pwr.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_rcc.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_rcc_ex.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_tim.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_tim_ex.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_adc.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_bus.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_cortex.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_dma.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_exti.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_gpio.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_i2c.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_pwr.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_rcc.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_system.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_tim.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_utils.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_adc.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_adc_ex.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_cortex.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_dma.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_exti.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash_ex.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio_ex.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_i2c.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_pwr.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc_ex.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim_ex.c"
        "source/EQ DRIVER/Core/Inc/adc.h"
        "source/EQ DRIVER/Core/Inc/bkp_regs.h"
        "source/EQ DRIVER/Core/Inc/gpio.h"
        "source/EQ DRIVER/Core/Inc/i2c.h"
        "source/EQ DRIVER/Core/Inc/main.h"
        "source/EQ DRIVER/Core/Inc/steppers.h"
        "source/EQ DRIVER/Core/Inc/stm32f1xx_hal_conf.h"
        "source/EQ DRIVER/Core/Inc/stm32f1xx_it.h"
        "source/EQ DRIVER/Core/Inc/tim.h"
        "source/EQ DRIVER/Core/Inc/variables.h"
        "source/EQ DRIVER/Core/Src/adc.c"
        "source/EQ DRIVER/Core/Src/bkp_regs.c"
        "source/EQ DRIVER/Core/Src/gpio.c"
        "source/EQ DRIVER/Core/Src/i2c.c"
        "source/EQ DRIVER/Core/Src/main.c"
        "source/EQ DRIVER/Core/Src/steppers.c"
        "source/EQ DRIVER/Core/Src/stm32f1xx_hal_msp.c"
        "source/EQ DRIVER/Core/Src/stm32f1xx_hal_timebase_tim.c"
        "source/EQ DRIVER/Core/Src/stm32f1xx_it.c"
        "source/EQ DRIVER/Core/Src/syscalls.c"
        "source/EQ DRIVER/Core/Src/sysmem.c"
        "source/EQ DRIVER/Core/Src/system_stm32f1xx.c"
        "source/EQ DRIVER/Core/Src/tim.c"
        "source/EQ DRIVER/Core/Src/variables.c"
        "source/EQ DRIVER/Drivers/CMSIS/Device/ST/STM32F1xx/Include/stm32f103xb.h"
        "source/EQ DRIVER/Drivers/CMSIS/Device/ST/STM32F1xx/Include/stm32f1xx.h"
        "source/EQ DRIVER/Drivers/CMSIS/Device/ST/STM32F1xx/Include/system_stm32f1xx.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/cmsis_armcc.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/cmsis_armclang.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/cmsis_compiler.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/cmsis_gcc.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/cmsis_iccarm.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/cmsis_version.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/core_armv8mbl.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/core_armv8mml.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/core_cm0.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/core_cm0plus.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/core_cm1.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/core_cm23.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/core_cm3.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/core_cm33.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/core_cm4.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/core_cm7.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/core_sc000.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/core_sc300.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/mpu_armv7.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/mpu_armv8.h"
        "source/EQ DRIVER/Drivers/CMSIS/Include/tz_context.h"
        "source/EQ DRIVER/Drivers/Display/Inc/bitmaps.h"
        "source/EQ DRIVER/Drivers/Display/Inc/Fonts.h"
        "source/EQ DRIVER/Drivers/Display/Inc/horse_running.h"
        "source/EQ DRIVER/Drivers/Display/Inc/sh1106.h"
        "source/EQ DRIVER/Drivers/Display/Src/sh1106.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/Legacy/stm32_hal_legacy.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_adc.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_adc_ex.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_cortex.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_def.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_dma.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_dma_ex.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_exti.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_flash.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_flash_ex.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_gpio.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_gpio_ex.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_i2c.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_pwr.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_rcc.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_rcc_ex.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_tim.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_hal_tim_ex.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_adc.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_bus.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_cortex.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_dma.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_exti.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_gpio.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_i2c.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_pwr.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_rcc.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_system.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_tim.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Inc/stm32f1xx_ll_utils.h"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_adc.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_adc_ex.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_cortex.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_dma.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_exti.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_flash_ex.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_gpio_ex.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_i2c.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_pwr.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_rcc_ex.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim.c"
        "source/EQ DRIVER/Drivers/STM32F1xx_HAL_Driver/Src/stm32f1xx_hal_tim_ex.c")
